Fixed Java 10.