@@ -17,6 +17,10 @@
                 <configuration>
                     <source>1.10</source>
                     <target>1.10</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal=tools.jar</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -100,11 +104,9 @@
             <version>0.6.3</version>
         </dependency>
         <dependency>
-            <groupId>com.sun</groupId>
-            <artifactId>tools</artifactId>
-            <scope>system</scope>
-            <version>1</version>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
     </dependencies>
 </project>
